--- a/templates/availability.html
+++ b/templates/availability.html
@@ -466,7 +466,7 @@ console.log("roomsToTimes:", JSON.stringify(roomsToTimes));
             .catch(error => {
                 console.error('❌ Error:', error);
             });
-            window.location.href = "/topics";
+            //window.location.href = "/topics";
 
 
 }
