--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -222,7 +222,7 @@
     
     
     function topics() {
-    	window.location.href="topics";
+    	window.location.href="projectTopics";
     }
     
     
