--- a/templates/projectTopics.html
+++ b/templates/projectTopics.html
@@ -235,7 +235,7 @@ Physics
 Earth Space Systems Science
 Economics/Social Issues</textarea>
 
-      <button type="submit" onclick="getProjectTopics()">Save Topics</button>
+      <button type="button" onclick="getProjectTopics()">Save Topics</button>
     </form>
   </div>
 
