--- a/templates/projectTopics.html
+++ b/templates/projectTopics.html
@@ -41,8 +41,9 @@
     .selection input[type="radio"]{
     	width=100%;
      }
-    
-    button[type="submit"]{
+
+	  /*button[type="submit"]*/
+    button{
     	background-color: #B51111;
         color: white;
         text-align: center;
