--- a/templates/projectTopics.html
+++ b/templates/projectTopics.html
@@ -222,7 +222,7 @@
 <body>
   <div class="formContainer">
     <div class="header">
-      <h2>Senior Questionnaire</h2>
+      <h2>Project Topics</h2>
       <h3 id="welcomeMessage"></h3>
     </div>
     <form>
