--- a/templates/topics.html
+++ b/templates/topics.html
@@ -182,7 +182,7 @@
 </div>
 
   <div id="app"></div>
-<button type="submit" onclick="logOutput()">Edit Topics</button>
+<button type="submit" onclick="logOutput()">Set Topics</button>
   
   
   
