--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -231,7 +231,7 @@
     }
     
     function topicsByRoom() {
-    	window.location.href="topics";	
+    	window.location.href="topicsByRoom";	
     }
     </script>
 </body>
