--- a/templates/topicsByRoom.html
+++ b/templates/topicsByRoom.html
@@ -395,7 +395,7 @@ fetch('/get_data')
             console.log(data);
             
             // Send the data to the backend
-            fetch('/set_topics', {
+            fetch('/setNewTopics', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
