--- a/templates/rosters.html
+++ b/templates/rosters.html
@@ -276,6 +276,7 @@ function uploadFiles() {
             })
             .then(response => {
                 console.log("✅ Received response from backend!"); 
+		window.location.href="/moderator";
                 return response.text();
             })
             .then(message => {
