--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -180,7 +180,7 @@
         	Project Topics
         </button>
         <button class="button" onclick="publish()">
-        	Publish Questionnaire
+        	View Senior Questionnaire
         </button>
         <button class="button" disabled=true onclick="viewResponses()">
         	View Responses
@@ -232,6 +232,10 @@
     
     function topicsByRoom() {
     	window.location.href="topicsByRoom";	
+    }
+
+    function beginScheduleGeneration() {
+    	window.location.href="generateStep1";
     }
     </script>
 </body>
