--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -196,7 +196,7 @@
         <button class="button" onclick="specialGroups()">
         	Set Special Groups
         </button>
-        <button class="button" disabled=true onclick="beginScheduleGeneration()">
+        <button class="button" onclick="beginScheduleGeneration()">
         	Begin Schedule Generation
         </button>
         <button class="button" disabled=true onclick="viewFinalSchedule()">
