--- a/templates/index.html
+++ b/templates/index.html
@@ -57,9 +57,13 @@ h2 {
 
   <h2>SMCS Symposium Scheduler</h2>
   
-  <button class="login-button" id="login"  onclick="window.location.href='login.html'">Log In</button>
+  <button class="login-button" id="login"  onclick="wsp()">Log In</button>
   
-  
+  <script>
+    function wsp() {
+      window.location.href='/login';
+    }
+  </script>
 
 
    
