--- a/templates/login.html
+++ b/templates/login.html
@@ -85,7 +85,7 @@
   left: 50%;
   transform: translateX(-50%);
   background-color:#ffc7c7ff;
-  color: white;
+  color: red;
   padding: 15px 25px;
   border-radius: 5px;
   transition: top 0.5s ease;
