--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -237,6 +237,10 @@
     function beginScheduleGeneration() {
     	window.location.href="generateStep1";
     }
+
+    function specialGroups {
+    	window.location.href="specialGroups";
+    }
     </script>
 </body>
 </html>
