--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -238,7 +238,7 @@
     	window.location.href="generateStep1";
     }
 
-    function specialGroups {
+    function specialGroups() {
     	window.location.href="specialGroups";
     }
     </script>
