--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,5 @@
 <head>
+<meta charset="UTF-8">
 <link href="https://fonts.googleapis.com/css2?family=Assistant&display=swap" rel="stylesheet">
   <style>
     body {
@@ -103,6 +104,7 @@
   </style>
 </head>
 <body>
+   <div id="notification" class="notification hidden"></div>
   <div class="backing">
     <div class="header">Welcome Back!</div>
     <div class="contentHeading">
