--- a/templates/login.html
+++ b/templates/login.html
@@ -194,7 +194,7 @@ document.getElementById("Username").addEventListener("keydown", function(event) 
         document.getElementById("notification").className="notification show";
         document.getElementById("notification").style.backgroundColor="#ffc7c7ff";
         document.getElementById("notification").style.color="red";
-        document.getElementById("notification").innerText="Invalid credentials;
+        document.getElementById("notification").innerText="Invalid credentials";
       }
         // else maybe redirect to user page or display error
     })
